2020-04-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSURLProtocol.h:
	* Source/NSURLProtocol.m:
	Fix [NSURLProtocol -initWithRequest:cachedResponse:client:] to retain
	the client (up until the last message is sent to it) as OSX does.

2020-04-12  Richard Frith-Macdonald <rfm@gnu.org>

	* CharSets/URLFragmentAllowedCharSet.h:
	* CharSets/URLHostAllowedCharSet.h:
	* CharSets/URLPasswordAllowedCharSet.h:
	* CharSets/URLPathAllowedCharSet.h:
	* CharSets/URLQueryAllowedCharSet.h:
	* CharSets/URLUserAllowedCharSet.h:
	Removed character set data headers from non-standard location.
	* NSCharacterSet.m: 
	Fixed to load URL characterset data from standard file.
	Changed bitmap representation to use much less space for charsets
	residing wholly in the base plane (in particular the URL charsets
	which are purely ASCII characters).
	* NSCharacterSetData.h:
	Regenerated to contain the URL charactersets and to contain the
	latest Unicode data (3rd Oct 2019).

2020-04-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GNUstep.h:
	Add ASSIGNMUTABLECOPY() macro for consistency with ASSIGNCOPY()
	Wolfgang pointed out that the lack of this macro was uninutitive.

2020-04-07  Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSOperation.m: Fix completion block memory management.

2020-04-05  Ivan Vucica <ivan@vucica.net>

	* ANNOUNCE:
	* NEWS:
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/news.texi:
	Update release notes for 1.27.0.

2020-03-29  Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSThread.m: Use pthread_setname_np result instead of errno,
	which fixes setting thread name on platforms where errno is not set.

2020-03-29  Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSURLResponse.m: Fix parsing of NSURLResponse content type
	header.

2020-03-29  Fred Kiefer <fredkiefer@gmx.de>

	* Source/NSString.m: Attempt to make calls to GSICUCollatorOpen()
	more consistent and correct for ICU 65.
