@@ -262,7 +262,6 @@ typedef	struct {
 #define	OBJC2RUNTIME @OBJC2RUNTIME@
 #define BASE_NATIVE_OBJC_EXCEPTIONS     @BASE_NATIVE_OBJC_EXCEPTIONS@
 #define GS_NONFRAGILE     @GS_NONFRAGILE@
-#define GS_MIXEDABI     @GS_MIXEDABI@
 #define GS_USE_LIBXML @HAVE_LIBXML@
 #define GS_USE_GNUTLS @HAVE_GNUTLS@
 #define GS_USE_AVAHI @HAVE_AVAHI@
